Prevents scrollbar from extending to the max height of the page for a cleaner look

--- a/src/Component CSS/Details.css
+++ b/src/Component CSS/Details.css
@@ -32,7 +32,6 @@
 
 .detailsContainer::-webkit-scrollbar {
   width: 0.3rem;
-  height: 80%;
 }
 
 .detailsContainer::-webkit-scrollbar-thumb {
@@ -42,6 +41,8 @@
 
 .detailsContainer::-webkit-scrollbar-track {
   background-color: rgba(177, 177, 177, 0.1);
+  border-radius: 1rem;
+  margin: 2rem 0rem;
 }
 
 
